fixed icons, aligned buttons, sidenav in again

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,4 @@
-  #adminLogin {
+#adminLogin {
   margin-left: 400px;
 }
 
@@ -23,8 +23,32 @@
   display: inline;
 }
 
-#hamburgerMenu:hover {
-  color: cornsilk;
+.navButton {
+  background-color:#cbe6a3;
+  color: black;
+  border-radius: 10px;
+  margin-right: 10px;
+  border: solid 3px;
+}
+
+.off {
+  background-color: #e9e8e5;
+  color: black;
+  border-radius: 10px;
+  margin-right: 10px;
+  border: solid 3px;
+}
+
+/*logo image button on map.html*/
+#logo {
+  height: 75px;
+  border: solid 3px black;
+  border-radius: 10px;
+}
+
+#logo:hover {
+  border: solid 3px green;
+  border-radius: 10px;
 }
 
 .gmap {
@@ -39,29 +63,104 @@ body {
 }
 
 .fa {
-  margin-right: 10px;
-  margin-left: 10px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .marker {
   font-size: 24px;
 }
 
-.col-sm-3 {
-  /*    height: 150px;
-        background-color:#01549b;*/
+/*reset button on map.html*/
+.reset{
+  background-color: FireBrick;
+  color: black;
+  border-radius: 10px;
+  margin-right: 10px;
+  border: solid 3px;
 }
 
-.col-sm-9 {
-  /*height: 160px;*/
-  /*background-color:#2aabd2;*/
-  /*border: 1px solid yellow;*/
-  /*opacity: 0.9;*/
+#menu {
+  margin: 0;
+  width: 1100px;
+  background-color: lightblue;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  text-align: left;
+  padding: 8px;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -o-border-radius: 8px;
 }
-/*
+
+#menu ul {
+     margin: 0;
+     padding: 8px 0;
+     list-style: none;
+     height: auto;
+     text-align: center;
+}
+
+#menu button {
+     display: inline-block;
+     padding: 8px;
+     margin: 10px;
+}
+
+#menu i {
+     padding: 5px;
+     text-decoration: none;
+}
+
+#menu button:hover {
+  color: ivory;
+  border-radius: 10px;
+  border: solid 3px green;
+}
+
+
+/* The side navigation menu */
+
+.sidenav {
+  height: 100%;
+  /* 100% Full-height */
+  width: 0;
+  /* 0 width - change this with JavaScript */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /*left: 0;*/
+  right: 0;
+  background-color: lightgreen;
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 60px;
+  /* Place content 60px from the top */
+  transition: 0.5s;
+  /* 0.5 second transition effect to slide in the sidenav */
+}
+
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.main {
+  padding: 20px;
+}
+
 .nav-side-menu {
   overflow: auto;
-  font-family: verdana;
+  font-family: 'Open Sans', sans-serif;
   font-size: 12px;
   font-weight: 200;
   background-color: #2e353d;
@@ -89,7 +188,7 @@ body {
   padding: 0px;
   margin: 0px;
   line-height: 35px;
-  cursor: pointer;*/
+  cursor: pointer;
   /*
       .collapsed{
          .arrow:before{
@@ -104,7 +203,8 @@ body {
        }
     */
 }
-/*
+
+
 .nav-side-menu ul :not(collapsed) .arrow:before, .nav-side-menu li :not(collapsed) .arrow:before {
   font-family: FontAwesome;
   content: "\f078";
@@ -194,7 +294,7 @@ body {
     color: #000;
     width: 40px;
     text-align: center;
-  }*/
+  }
   .brand {
     text-align: left !important;
     font-size: 22px;
@@ -203,7 +303,7 @@ body {
   }
 }
 
-/*@media (min-width: 767px) {
+@media (min-width: 767px) {
   .nav-side-menu .menu-list .menu-content {
     display: block;
   }
@@ -212,13 +312,13 @@ body {
   padding: 0px;
   font-family: 'Open Sans', sans-serif;
   width: 1100px;
-}*/
+}
 
 h1, h2, h3 {
   font-family: 'Sansita', sans-serif;
 }
 
-/*ul {
+ul {
   list-style-type: none;
 }
 
@@ -229,57 +329,18 @@ i {
 .sidenav li {
   font-size: 18px;
   /*padding: 8px 8px 8px 32px;*/
-  /*transition: 0.3s
-}*/
+  transition: 0.3s
+}
 
-/*li:hover {
+.sidenav li:hover {
   background-color: blue;
   color: white;
-}*/
-
-
-/* The side navigation menu */
-
-/*.sidenav {
-  height: 100%;
-  /* 100% Full-height */
-  /*width: 0;*/
-  /* 0 width - change this with JavaScript */
-  /*position: fixed;*/
-  /* Stay in place */
-  /*z-index: 1;*/
-  /* Stay on top */
-  /*top: 0;*/
-  /*left: 0;*/
-  /*right: 0;
-  background-color: lightgreen;
-  overflow-x: hidden;*/
-  /* Disable horizontal scroll */
-  /*padding-top: 60px;*/
-  /* Place content 60px from the top */
-  /*transition: 0.5s;*/
-  /* 0.5 second transition effect to slide in the sidenav */
 }
 
-
-/* Position and style the close button (top right corner) */
-
-/*.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}*/
-
-.main {
-  padding: 20px;
-}
 
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-
-/*@media screen and (max-height: 450px) {
+@media screen and (max-height: 450px) {
   .sidenav {
     padding-top: 15px;
   }
@@ -292,7 +353,7 @@ i {
   #main {
     padding: 0px;
   }
-}*/
+}
 
 .form-group {
   display: inline-block;
@@ -324,8 +385,16 @@ i {
   color: blue;
 }
 
+.fa-refresh {
+  color: black;
+}
 
-/*.dropdown-content {
+.fa-car {
+  color: indigo;
+}
+
+
+.dropdown-content {
   display: none;
   position: absolute;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -337,75 +406,15 @@ i {
   color: black;
   .marker {
     font-size: 20px;
-  }*/
-
-  #menu {
-     margin: 0;
-     width: 1100px;
-     background-color: lightblue;
-     font-size: 16px;
-     font-family: Tahoma, Geneva, sans-serif;
-     font-weight: bold;
-     text-align: left;
-     padding: 8px;
-     border-radius: 8px;
-     -webkit-border-radius: 8px;
-     -moz-border-radius: 8px;
-     -o-border-radius: 8px;
-}
-
-#menu ul {
-     margin: 0;
-     padding: 8px 0;
-     list-style: none;
-     height: auto;
-     text-align: center;
-}
-
-#menu button {
-     display: inline-block;
-     padding: 8px;
-     margin: 10px;
-}
-
-#menu i {
-     padding: 10px;
-     text-decoration: none;
-}
-
-#menu button:hover {
-  color: ivory;
-  border-radius: 10px;
-  border: solid 3px green;
+  }
 }
 
 #placeImg{
   width: 200px;
 }
 
-.logoName {
-  color: black;
-  text-align: center;
-}
-
 ul {
   list-style: none;
-}
-
-.navButton {
-  background-color:#cbe6a3;
-  color: black;
-  border-radius: 10px;
-  margin-right: 10px;
-  border: solid 3px;
-}
-
-.off {
-  background-color: #e9e8e5;
-  color: black;
-  border-radius: 10px;
-  margin-right: 10px;
-  border: solid 3px;
 }
 
 td {
@@ -421,29 +430,11 @@ input {
   margin: 5px
 }
 
-.reset{
-  background-color: FireBrick;
-  color: black;
-  border-radius: 10px;
-  margin-right: 10px;
-  border: solid 3px;
-}
-
-#logo{
-  height: 100px;
-  border: solid 3px black;
-  border-radius: 10px;
-}
-
-#logo:hover {
-  border: solid 3px green;
-  border-radius: 10px;
-}
-
+/*drop down menu width*/
 .types_select {
   width: 250px;
 }
-
+/*on admin.html*/
 .adminHeader {
   text-align: center;
 }
